--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -135,31 +135,31 @@
 
 
                     <!-- POSITIVE BUTTON -->
-                    <button *ngIf="positiveChecked" class="voteIconButtonGreen" (click)="selectedOpt('positive');"
+                    <button *ngIf="positiveChecked" class="voteIconButtonGreen" (click)="selectedOpt('Positive');"
                         mat-icon-button matTooltip="" matTooltipPosition="above">
                         <mat-icon>sentiment_very_satisfied</mat-icon>
                     </button>
                     
-                    <button *ngIf="!positiveChecked" class="voteIconButton" (click)="selectedOpt('positive');"
+                    <button *ngIf="!positiveChecked" class="voteIconButton" (click)="selectedOpt('Positive');"
                         mat-icon-button matTooltip="" matTooltipPosition="above">
                         <mat-icon>sentiment_very_satisfied</mat-icon>
                     </button>
 
-                    <button *ngIf="neutralChecked" class="voteIconButtonYellow" (click)="selectedOpt('neutral');"
+                    <button *ngIf="neutralChecked" class="voteIconButtonYellow" (click)="selectedOpt('Neutral');"
                         mat-icon-button matTooltip="" matTooltipPosition="above">
                         <mat-icon>sentiment_neutral</mat-icon>
                     </button>
-                    <button *ngIf="!neutralChecked" class="voteIconButton" (click)="selectedOpt('neutral');"
+                    <button *ngIf="!neutralChecked" class="voteIconButton" (click)="selectedOpt('Neutral');"
                         mat-icon-button matTooltip="" matTooltipPosition="above">
                         <mat-icon>sentiment_neutral</mat-icon>
                     </button>
 
                     <!-- NEGATIVE BUTTON -->
-                    <button *ngIf="negativeChecked" class="voteIconButtonRed" (click)="selectedOpt('negative');"
+                    <button *ngIf="negativeChecked" class="voteIconButtonRed" (click)="selectedOpt('Negative');"
                         mat-icon-button matTooltip="" matTooltipPosition="above">
                         <mat-icon>sentiment_very_dissatisfied</mat-icon>
                     </button>
-                    <button *ngIf="!negativeChecked" class="voteIconButton" (click)="selectedOpt('negative');"
+                    <button *ngIf="!negativeChecked" class="voteIconButton" (click)="selectedOpt('Negative');"
                         mat-icon-button matTooltip="" matTooltipPosition="above">
                         <mat-icon>sentiment_very_dissatisfied</mat-icon>
                     </button>
