--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -420,7 +420,7 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     }
 
     .voteIconButton:hover:nth-child(#{$i}) {
-        // color: nth($voteIconsColor, $i);
+        color: nth($voteIconsColor, $i);
         transition: all 2ms ease-in-out;
         position: relative;
         top: -2px;
@@ -515,14 +515,14 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     }
 }
 
-::ng-deep .mat-tooltip {
-    font-size: 24px;
-    position: absolute;
-    left: -2px;
-    top: -30px;
-    width: max-content;
-    text-align: center;
-}
+// ::ng-deep .mat-tooltip {
+//     font-size: 24px;
+//     position: absolute;
+//     left: -2px;
+//     top: -30px;
+//     width: max-content;
+//     text-align: center;
+// }
 
 // theme
 
