--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -515,14 +515,14 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     }
 }
 
-// ::ng-deep .mat-tooltip {
-//     font-size: 24px;
-//     position: absolute;
-//     left: -2px;
-//     top: -30px;
-//     width: max-content;
-//     text-align: center;
-// }
+::ng-deep .mat-tooltip {
+    font-size: 24px;
+    position: absolute;
+    left: -2px;
+    top: -30px;
+    width: max-content;
+    text-align: center;
+}
 
 // theme
 
@@ -579,7 +579,7 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
 
     .summaryMainContent::-webkit-scrollbar {
         display: none;
-      }
+    }
 
     .summaryTextarea {
         display: flex;
@@ -593,9 +593,9 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
         margin-top: -22px;
     }
 
-    .summaryListDisplay{
-        display: flex; 
-        flex-direction: column; 
+    .summaryListDisplay {
+        display: flex;
+        flex-direction: column;
         display: flex;
         justify-content: left;
         align-items: left;
@@ -605,3 +605,78 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     }
 }
 
+.subMainContainer {
+    // background-color: white;
+    // border: solid 5px rgb(230, 13, 13);
+    width: 948px;
+    height: 600px;
+    margin: 0;
+    position: absolute;
+    top: 53%;
+    left: 50%;
+    -ms-transform: translate(-50%, -53%);
+    transform: translate(-50%, -53%);
+    border-radius: 3px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+
+    .groupSlideContent {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        height: 1350px;
+        /* width: 300px; */
+
+        .groupNameItemContainer {
+            display: flex;
+            flex-direction: row;
+            align-items: flex-start;
+            justify-content: flex-start;
+            // border: brown solid 0px;
+
+            .groupNameItem {
+                font-size: 20px;
+                margin: 11px;
+            }
+            .groupNameItemNotation {
+                font-size: 15px;
+                padding-left: 5px;
+                margin: 11px;
+            }
+            .groupNameIetmRationale {
+                width: 200px;
+                height: 30px;
+                position: absolute;
+                /* top: 1px; */
+                border: #57b446 solid 1px;
+                /* left: 11px; */
+                margin: 5px 164px;
+                border-radius: 3px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: aquamarine;
+            }
+            .voteItems {
+                width: 136px;
+                height: 34px;
+                position: absolute;
+                border: #ec0aec solid 2px;
+                margin: 34px 46px;
+                border-radius: 3px;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                background-color: white;
+                z-index: 1;
+            }
+        }
+    }
+}
+
+// GROUP NAME TEMPLATE SCSS
+.subMainContainer::-webkit-scrollbar {
+    display: none;
+}
