--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -625,53 +625,78 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
         flex-direction: column;
         flex-wrap: wrap;
         justify-content: flex-start;
-        height: 1350px;
+        height: 1400px;
         /* width: 300px; */
 
+        .groupNameItemContainer:hover {
+            @include BoxShadow(6);
+        }
         .groupNameItemContainer {
             display: flex;
             flex-direction: row;
             align-items: flex-start;
             justify-content: flex-start;
+          
             // border: brown solid 0px;
 
             .groupNameItem {
                 font-size: 20px;
                 margin: 11px;
+                animation: fadeIn 0.5s ease-in forwards;
+                text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+                box-shadow: inset inset 0px 0px 5px #c1c1c1;
+                
             }
             .groupNameItemNotation {
                 font-size: 15px;
                 padding-left: 5px;
                 margin: 11px;
+                animation: fadeIn 0.9s ease-in forwards;
             }
             .groupNameIetmRationale {
                 width: 200px;
                 height: 30px;
-                position: absolute;
+                position: relative;
                 /* top: 1px; */
                 border: #57b446 solid 1px;
                 /* left: 11px; */
-                margin: 5px 164px;
+                margin: 5px 10px;
                 border-radius: 3px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 background-color: aquamarine;
+                animation: fadeIn 0.2s ease-in forwards;
             }
             .voteItems {
                 width: 136px;
                 height: 34px;
-                position: absolute;
+                position: relative;
                 border: #ec0aec solid 2px;
-                margin: 34px 46px;
+                margin: 8px 1px;
                 border-radius: 3px;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
                 justify-content: center;
-                background-color: white;
+                background-color: #ffffff38;
                 z-index: 1;
+                animation: fadeInRight 0.2s ease-in forwards;
             }
+            // .voteItems {
+            //     width: 136px;
+            //     height: 34px;
+            //     position: absolute;
+            //     border: #ec0aec solid 2px;
+            //     margin: 34px 46px;
+            //     border-radius: 3px;
+            //     display: flex;
+            //     flex-direction: row;
+            //     align-items: center;
+            //     justify-content: center;
+            //     background-color: white;
+            //     z-index: 1;
+            // }
         }
     }
 }
@@ -680,3 +705,8 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
 .subMainContainer::-webkit-scrollbar {
     display: none;
 }
+
+.example-card {
+    width: 400px;
+  }
+  
