--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -161,6 +161,24 @@
     box-shadow: inset inset 0px 0px 5px #c1c1c1;
 }
 
+.heart-favorite-icon:hover {
+    transform: scale(2);
+    color: white;
+    font-size: 30px;
+    margin: -8px -18px;
+    position: absolute;
+}
+.heart-favorite-icon {
+    color: white;
+    font-size: 20px;
+    margin: -11px -13px;
+    position: absolute;
+    transition: all 0.1s ease-in-out;
+    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+    box-shadow: inset inset 0px 0px 5px #c1c1c1;
+    transform: scale(2);
+}
+
 .menu-left-icon {
     position: absolute;
     right: -50px;
@@ -348,19 +366,64 @@
     @include BoxShadow(6);
     // animation: heartBeat 10000ms ease-in-out 20ms infinite;
 }
+.heart-favorite {
+    width: 70px;
+    height: 70px;
+    border: 5px solid red;
+    position: absolute;
+    right: 434px;
+    bottom: -35px;
+    outline: none;
+    // font-size: 45px;
+    line-height: 31px;
+    background-color: red;
+    color: grey;
+    font-family: auto;
+    z-index: 2;
+    animation: tada 1000ms ease-in-out 1ms forwards;
+    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+    box-shadow: inset inset 0px 0px 5px #c1c1c1;
+    @include BoxShadow(6);
+    transform: scale(1.2);
+}
+
+.heart-favorite-Off:hover {
+    transform: scale(1.2);
+}
+
+.heart-favorite-Off {
+    width: 70px;
+    height: 70px;
+    border: 5px solid white;
+    position: absolute;
+    right: 434px;
+    bottom: -35px;
+    outline: none;
+    font-size: 45px;
+    line-height: 30px;
+    background-color: red;
+    color: white;
+    font-family: auto;
+    z-index: 2;
+    transition: all 100ms ease-in-out;
+    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+    box-shadow: inset inset 0px 0px 5px #c1c1c1;
+    @include BoxShadow(6);
+    // animation: heartBeat 10000ms ease-in-out 20ms infinite;
+}
 .G1 {
     @include BoxShadow(6);
     width: 35px;
     height: 35px;
-    border: 3px solid darkblue;
+    border: 3px solid #f2ce00;
     position: absolute;
-    right: 511px;
+    right: 538px;
     bottom: -19px;
     outline: none;
     font-size: 23px;
     line-height: 10px;
     background-color: white;
-    color: darkblue;
+    color: #f2ce00;
     font-family: auto;
 }
 .G2 {
@@ -397,7 +460,7 @@
     @include BoxShadow(6);
     width: 35px;
     height: 35px;
-    border: 3px solid darkblue;
+    border: 3px solid purple;
     position: absolute;
     right: 374px;
     bottom: -19px;
@@ -405,7 +468,7 @@
     font-size: 23px;
     line-height: 10px;
     background-color: white;
-    color: darkblue;
+    color: purple;
     font-family: auto;
 }
 
@@ -626,31 +689,51 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
         flex-wrap: wrap;
         justify-content: flex-start;
         height: 1400px;
+        padding: 4px 0px 0px 83px;
         /* width: 300px; */
 
+        .voteIconRank {
+            text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+            // box-shadow: inset inset 0px 0px 5px #c1c1c1;
+            // @include BoxShadow(6);
+        }
+
         .groupNameItemContainer:hover {
-            @include BoxShadow(6);
+            @include BoxShadow(2);
+            border-bottom-right-radius: 10px;
+            // border-top-right-radius: 10px;
+            height: max-content;
+            margin: 5px;
         }
         .groupNameItemContainer {
+            // testing code
+
+            // @include BoxShadow(6);
+            // border-bottom-right-radius: 5px;
+            // border-top-right-radius: 5px;
+            // height: max-content;
+            // margin: 5px;
+
+            // end testing code
+
             display: flex;
             flex-direction: row;
             align-items: flex-start;
             justify-content: flex-start;
-          
+
             // border: brown solid 0px;
 
             .groupNameItem {
                 font-size: 20px;
-                margin: 11px;
+                margin: 30px 10px;
                 animation: fadeIn 0.5s ease-in forwards;
                 text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
                 box-shadow: inset inset 0px 0px 5px #c1c1c1;
-                
             }
             .groupNameItemNotation {
                 font-size: 15px;
-                padding-left: 5px;
-                margin: 11px;
+                padding-left: 0px;
+                margin: 21px 6px;
                 animation: fadeIn 0.9s ease-in forwards;
             }
             .groupNameIetmRationale {
@@ -708,5 +791,4 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
 
 .example-card {
     width: 400px;
-  }
-  
+}
